<resources>
    <string name="app_name">Fitness App</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="male">Male</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>

    <string name="calculator">Calculator</string>
    <string name="exercices">Exercices</string>
    <string name="home">Home</string>
    <string name="welcome_to_my_gym">- Welcome To My Gym -</string>
    <string name="textview">TextView</string>
    <string name="textf">Textf</string>
    <string name="type_of_program">Type of program</string>
    <string name="choose_your_program">choose your program</string>

</resources>