<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FitnessApp.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="16dp"
            android:text="@string/welcome_to_my_gym"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/exercices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercices" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.viewpager.widget.ViewPager>
    <FrameLayout
        android:id="@+id/homeframe"
        android:layout_marginTop="140dp"
        android:layout_width="411dp"
        android:layout_height="590dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>